RESOLVED FIXED34047
"endedPlayback" logic doesn't match spec
https://bugs.webkit.org/show_bug.cgi?id=34047
Summary "endedPlayback" logic doesn't match spec
Eric Carlson
Reported 2010-01-23 23:05:19 PST
Section 4.8.10.8, "Playing the media resource" says: "A media element is said to have ended playback when the element's readyState attribute is HAVE_METADATA or greater, and either the current playback position is the end of the media resource and the direction of playback is forwards and the media element does not have a loop attribute specified, or the current playback position is the earliest possible position and the direction of playback is backwards." but WebKit's HTMLMediaElement doesn't consider the direction of playback at all.
Attachments
Proposed patch (7.16 KB, patch)
2010-01-23 23:14 PST, Eric Carlson
simon.fraser: review+
Eric Carlson
Comment 1 2010-01-23 23:07:00 PST
Eric Carlson
Comment 2 2010-01-23 23:14:14 PST
Created attachment 47287 [details] Proposed patch
Simon Fraser (smfr)
Comment 3 2010-01-24 08:35:14 PST
Comment on attachment 47287 [details] Proposed patch r=me but I wonder if the !loop() check should be done for backwards playback. Is reverse looping supposed to work?
Eric Carlson
Comment 4 2010-01-24 10:04:29 PST
Reverse looping isn't supported: 4.8.10.6 The loop attribute is a boolean attribute that, if specified, indicates that the media element is to seek back to the start of the media resource upon reaching the end. and 4.8.10.8 When the current playback position reaches the earliest possible position of the media resource when the direction of playback is backwards, then the user agent must follow these steps: 1. Stop playback. 2. The user agent must queue a task to fire a simple event named timeupdate at the element.
Eric Carlson
Comment 5 2010-01-24 10:05:03 PST
Thanks for the review!
Eric Seidel (no email)
Comment 7 2010-01-24 14:22:44 PST
Looks like it broke Tiger in the same way: http://build.webkit.org/results/Tiger%20Intel%20Release/r53782%20(8111)/media/audio-delete-while-slider-thumb-clicked-diffs.txt (Just trying to clean up the bots after the commit-bot broke windows last night.)
Eric Carlson
Comment 8 2010-01-24 14:56:21 PST
http://trac.webkit.org/changeset/53786 should fix both, I made the test only log the first 'timeupdate' event.
Eric Seidel (no email)
Comment 9 2010-01-24 17:14:05 PST
Thanks! Should this bug stay open for further work, or should we close it?
Note You need to log in before you can comment on or make changes to this bug.