2010-01-24  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=34047
        <rdar://problem/7573699>
        Media element "endedPlayback" logic doesn't match spec

        Test: media/video-timeupdate-reverse-play.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::ended): The 'ended' attribute should only be true when playback
        rate is positive.
        (WebCore::HTMLMediaElement::mediaPlayerTimeChanged): Always schedule a 'timeupdate' event when
        the media engine signals a time discontinuity, scheduleTimeupdateEvent will only queue an event
        if one hasn't already been posted for the current movie time.
        (WebCore::HTMLMediaElement::endedPlayback): Update to match the spec logic.

2010-01-24  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=34047
        <rdar://problem/7573699>
        Media element "endedPlayback" logic doesn't match spec

        * media/video-timeupdate-reverse-play-expected.txt: Added.
        * media/video-timeupdate-reverse-play.html: Added.


Canonical link: https://commits.webkit.org/45179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53780 268f45cc-cd09-0410-ab3c-d52691b4dbfc